# teste_cpp

./: .gitignore  CMakeLists.txt  main.cpp
mylib/: CMakeLists.txt  my_atoi.cpp  my_atoi.h
tests/: CMakeLists.txt  test_mylib.cpp
